tests/lean/bug1.lean.expected.out
bug1.lean:9:7: error: type mismatch at definition 'and_intro', has type
  ∀ (p q : bool),
    p → q → (∀ (c : bool), (p → q → c) → c)
but is expected to have type
  ∀ (p q : bool),
    p → q → a
bug1.lean:13:7: error: type mismatch at definition 'and_intro', has type
  ∀ (p q : bool),
    p → q → (∀ (c : bool), (p → q → c) → c)
but is expected to have type
  ∀ (p q : bool),
    p → q → and p p
bug1.lean:17:7: error: type mismatch at definition 'and_intro', has type
  ∀ (p q : bool),
    p → q → (∀ (c : bool), (p → q → c) → c)
but is expected to have type
  ∀ (p q : bool),
    p → q → and q p
and_intro : ∀ (p q : bool), p → q → and p q
